--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,4 +1,4 @@
-@media screen and (min-width:600px) {
+@media screen and (min-width:500px) {
     header {
         background-color: rgb(41, 128, 6);
         color: white;
